tests/functional/lang/eval-fail/memoised-error-trace-not-mutated.err.exp
error:
       … while calling the 'seq' builtin
         at /pwd/lang/eval-fail/memoised-error-trace-not-mutated.nix:10:1:
            9| # a fresh instance of the exceptions to avoid trace mutation.
           10| builtins.seq (builtins.tryEval b) (builtins.seq (builtins.tryEval c) d)
             | ^
           11|

       … while calling the 'seq' builtin
         at /pwd/lang/eval-fail/memoised-error-trace-not-mutated.nix:10:36:
            9| # a fresh instance of the exceptions to avoid trace mutation.
           10| builtins.seq (builtins.tryEval b) (builtins.seq (builtins.tryEval c) d)
             |                                    ^
           11|

       … forcing d

       … forcing b

       … while calling the 'throw' builtin
         at /pwd/lang/eval-fail/memoised-error-trace-not-mutated.nix:2:7:
            1| let
            2|   a = throw "nope";
             |       ^
            3|   b = builtins.addErrorContext "forcing b" a;

       error: nope
